--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev:remote": "cp .env.production.local .env.local && next dev",
+    "dev:local": "cp .env.development.local .env.local 2>/dev/null || echo 'Using existing .env.local' && next dev",
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
@@ -36,6 +38,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.3",
+    "dotenv-cli": "^11.0.0",
     "lucide-react": "^0.555.0",
     "next": "^16.1.1",
     "react": "19.2.0",
@@ -52,6 +56,7 @@
     "@types/react-dom": "^19",
     "@types/uuid": "^10.0.0",
     "babel-plugin-react-compiler": "1.0.0",
+    "env-cmd": "^11.0.0",
     "eslint": "^9",
     "eslint-config-next": "^16.1.1",
     "serwist": "^9.2.3",
