--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -305,7 +305,7 @@ max_frequency = "5s"
 enabled = true
 client_id = "env(GOOGLE_CLIENT_ID)"
 secret = "env(GOOGLE_CLIENT_SECRET)"
-redirect_uri = ""
+redirect_uri = "http://127.0.0.1:54321/auth/v1/callback"
 skip_nonce_check = true
 
 [auth.external.apple]
